<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right" >
        

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="30dp"
            android:gravity="top" 
            android:text="@string/points"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textColor="#868686" />
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="30dp"
            android:gravity="top" 
            android:text="@string/points_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="10sp"
            android:paddingLeft="10dp"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textSize="25sp"
        android:gravity="top" 
        android:text="@string/hint"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:textSize="25sp"
        android:gravity="top" 
        android:text="@string/hint_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <Button
            android:id="@+id/button_enable_camera"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/button_text" 
            android:background="@drawable/red_button"
            android:text="@string/button_enable_camera" />
        
       <Button
           android:id="@+id/button_new_hint"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           style="@style/button_text" 
           android:background="@drawable/red_button"
           android:text="@string/button_new_hint" />

</LinearLayout>
