<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
             android:id="@+id/result_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="30dp"
             android:text="@string/result_text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:paddingTop="10dp"
             android:paddingBottom="40dp"
             android:textStyle="bold"
             android:textSize="40sp" />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center" >

         <TextView
             android:id="@+id/result_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="30dp"
             android:text="@string/result_text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:paddingBottom="40dp"
             android:paddingRight="20dp"
             android:textSize="50sp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="30dp"
            android:text="@string/points"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="70dp"
            android:textSize="100sp"
            android:gravity="center"
            android:textColor="#868686" />

        <TextView
            android:id="@+id/points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="30dp"
            android:text="@string/points_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="35dp"
            android:paddingLeft="20dp"
            android:textSize="30sp" />

    </LinearLayout>
    
    	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="30dp"
            android:text="@string/reward"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="50dp"
            android:textSize="24sp" />
    

        <Button
            android:id="@+id/restart_game"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/button_text" 
            android:background="@drawable/red_button"
            android:text="@string/restart_game" />
        
       <Button
           android:id="@+id/quit_game"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           style="@style/button_text" 
           android:background="@drawable/red_button"
           android:text="@string/quit_game" />

</LinearLayout>
